--- a/fi/browser/chrome/browser/loop/loop.properties
+++ b/fi/browser/chrome/browser/loop/loop.properties
@@ -55,8 +55,8 @@ retry_button=Yritä uudestaan
 share_email_subject3=Sinut on kutsuttu keskusteluun
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Hyväksy kutsu ja aloita keskustelu kopioimalla tai avaamalla seuraava linkkin:\r\n\r\n{{callUrl}}
-share_button=Lähetä postia
+share_email_body3=Hyväksy kutsu ja aloita keskustelu kopioimalla tai avaamalla seuraava linkki:\r\n\r\n{{callUrl}}
+share_button=Sähköpostita
 copy_url_button=Kopioi
 copied_url_button=Kopioitu!
 
@@ -247,7 +247,7 @@ client_shortname_fallback=tätä tuotetta
 
 feedback_call_experience_heading2=Miten soitto sujui?
 feedback_what_makes_you_sad=Miksi et ole tyytyväinen?
-feedback_thank_you_heading=Kiitoksia palautteesta!
+feedback_thank_you_heading=Kiitos palautteesta!
 feedback_category_audio_quality=Äänenlaatu
 feedback_category_video_quality=Videon laatu
 feedback_category_was_disconnected=Yhteys katkesi
