--- a/fi/dom/chrome/security/security.properties
+++ b/fi/dom/chrome/security/security.properties
@@ -8,8 +8,12 @@ CrossSiteRequestBlocked=Eri lähteistä tulevat pyynnöt estetty (Cross-Origin R
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Verkkosivusto määritteli virheellisen Strict-Transport-Security -otsakkeen.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=Sivuston Public-Key-Pins -otsake on virheellinen.
 InsecurePasswordsPresentOnPage=Salasanakenttiä suojaamattomalla (http://) sivulla. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
 InsecureFormActionPasswordsPresent=Salasanakenttiä lomakkeessa suojaamattoman (http://) lomaketoiminnon yhteydessä. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
 InsecurePasswordsPresentOnIframe=Salasanakenttiä suojaamattomassa (http://) iframessa. Tämä on turvallisuusriski, jonka avulla käyttäjän kirjautumistiedot voidaan varastaa.
 LoadingMixedActiveContent=Ladataan osittain suojaamaton interaktiivista sisältöä suojatulla sivulla "%1$S"
 LoadingMixedDisplayContent=Ladataan osittain suojaamatonta näytettävää sisältöä suojatulla sivulla "%1$S"
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=iframe-kehyksellä, jolle on asetettu sekä allow-scripts, että allow-same-origin sen sandbox-ominaisuuksiin voi poistaa hiekkalaatikkotilan käytöstä.
