--- a/fi/security/manager/chrome/pipnss/nsserrors.properties
+++ b/fi/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL-vastaanotti virheellisen NPN-laajennust
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-ominaisuutta ei tueta SSL 2.0 -yhteyksille.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-ominaisuutta ei tueta palvelimelle.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-ominaisuutta ei tueta asiakkaille.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL-versiorajaus ei ole kelvollinen.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL-osapuoli valitsi salakirjoitusperheen, joka ei ole sallittu yhteyskäytännön valitulla versiolla.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL vastaanotti virheellisesti muotoillut "Hello Verify Request" -kättelyviestin.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL vastaanotti odottamattoman "Hello Verify Request" -kättelyviestin.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL ominaisuutta ei tueta yhteyskäytännön valitulla versiolla.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL vastaanotti odottamattoman "Certificate Status" -kättelyviestin.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=TLS-osapuoli käytti ei tuettua tiivistealgoritmia.
+SSL_ERROR_DIGEST_FAILURE=Yhteenvetofunktio ei toiminut.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Käytetty virheellistä allekirjoitusalgoritmia sähköisesti allekirjoitetussa elementissä.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Seuraavan yhteyskäytännön kättelylaajennus otettiin käyttöön, mutta kutsu peruttiin ennen kuin laajennusta käytettiin.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Palvelin ei tue yhtäkään yhteyskäytäntöä, jota asiakas tukee ALPN-laajennuksessa.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Palvelin hylkäsi kättelyn, koska asiakas siirtyi heikompaan TLS-salaukseen kuin palvelin tukee.
 SEC_ERROR_IO=Tietoturvatodennuksen aikana tapahtui I/O-virhe.
 SEC_ERROR_LIBRARY_FAILURE=tietoturvakirjaston virhe.
 SEC_ERROR_BAD_DATA=tietoturvakirjasto: vastaanotettiin virheellistä dataa.
