--- a/fi/dom/chrome/accessibility/AccessFu.properties
+++ b/fi/dom/chrome/accessibility/AccessFu.properties
@@ -3,8 +3,8 @@
 # You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Screen reader started/stopped
-screenReaderStarted = Tekstinlukija käynnistetty
-screenReaderStopped = Tekstinlukija pysäytetty
+screenReaderStarted = Ruudunlukija käynnistetty
+screenReaderStopped = Ruudunlukija pysäytetty
 
 # Roles
 menubar        =       valikko
@@ -45,13 +45,13 @@ equation       =       yhtälö
 buttonmenu     =       painikevalikko
 whitespace     =       tyhjä tila
 pagetablist    =       välilehtilista
-canvas         =       kangas
+canvas         =       piirtoalue
 checkmenuitem  =       valintavalikkokohta
 label          =       nimi
 passwordtext   =       salasanateksti
 radiomenuitem  =       yhden valinnan valikon kohta
 textcontainer  =       tekstilaatikko
-togglebutton   =       vaihda valinta -painike
+togglebutton   =       joko-tai -painike
 treetable      =       puutaulukko
 header         =       yläotsake
 footer         =       alaotsake
@@ -59,7 +59,7 @@ paragraph      =       kappale
 entry          =       merkintä
 caption        =       kuvateksti
 heading        =       otsikko
-section        =       osa
+section        =       osio
 form           =       lomake
 comboboxlist   =       monivalintakohtien lista
 comboboxoption =       monivalintakohdan asetukset
@@ -157,6 +157,7 @@ statePressed     =    painettu
 stateExpanded    =    laajennettu
 stateCollapsed   =    supistettu
 stateUnavailable =    ei saatavilla
+stateReadonly    =    vainluku
 stateRequired    =    vaadittu
 stateTraversed   =    vierailtu
 stateHasPopup    =    ponnahdusikkunallinen
@@ -211,14 +212,14 @@ outlineitemAbbr    =       otsikko
 pagetabAbbr        =       välilehti
 propertypageAbbr   =       ominaisuussivu
 graphicAbbr        =       grafiikka
-pushbuttonAbbr     =       painike
+pushbuttonAbbr     =       pnike
 checkbuttonAbbr    =       monivalintanappi
 radiobuttonAbbr    =       valintanappi
 comboboxAbbr       =       valintalaatikko
 progressbarAbbr    =       edistymispalkki
 sliderAbbr         =       vedin
 spinbuttonAbbr     =       kiertopainike
-diagramAbbr        =       diagrammi
+diagramAbbr        =       kuvaaja
 animationAbbr      =       animaatio
 equationAbbr       =       yhtälö
 buttonmenuAbbr     =       painikevalikko
@@ -232,13 +233,13 @@ radiomenuitemAbbr  =       valintavalikon kohta
 textcontainerAbbr  =       tekstilaatikko
 togglebuttonAbbr   =       joko-tai -painike
 treetableAbbr      =       puutaulukko
-headerAbbr         =       ylätunniste
-footerAbbr         =       alatunniste
+headerAbbr         =       yläotsake
+footerAbbr         =       alaotsake
 paragraphAbbr      =       kappale
 entryAbbr          =       merkintä
 captionAbbr        =       kuvateksti
 headingAbbr        =       otsikko
-sectionAbbr        =       alaotsikko
+sectionAbbr        =       osio
 formAbbr           =       lomake
 comboboxlistAbbr   =       valintalaatikkolista
 comboboxoptionAbbr =       valintalaatikon vaihtoehto
