New strings for Aurora 3:3 + corrections

--- a/da/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/da/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -101,7 +101,7 @@ panic-button.label = Glem
 panic-button.tooltiptext = Glem noget af din browserhistorik
 
 web-apps-button.label = Apps
-web-apps-button.tooltiptext = Find nye Apps
+web-apps-button.tooltiptext = Find nye apps
 
 loop-call-button2.label = Start en samtale
 loop-call-button2.tooltiptext = Start en samtale
