--- a/da/browser/chrome/browser/devtools/scratchpad.properties
+++ b/da/browser/chrome/browser/devtools/scratchpad.properties
@@ -34,7 +34,7 @@ openFile.failed=Indlæsning af fil mislykkedes.
 
 # LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
 # open fails.
-importFromFile.convert.failed=Konvertering af fil til Unicode fra %1$S mislykkedes.
+importFromFile.convert.failed=Konvertering af fil fra %1$S til Unicode mislykkedes.
 
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
