[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -11,6 +11,7 @@
 ## replaced by the brand name
 
 share_link_header_text=Compartilhe este link para convidar alguém para conversar:
+invite_header_text=Convide alguém para se juntar a você.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
