[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -456,8 +456,11 @@ social.marklinkMenu.label=ذخیره پیوند به %S
 social.error.message=در حال حاضر %1$S نمی‌تواند به %2$S وصل شود.
 social.error.tryAgain.label=تلاش مجدد
 social.error.tryAgain.accesskey=ت
+social.error.closeSidebar.label=بستن این نوار‌ کناری
+social.error.closeSidebar.accesskey=ب
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
+social.aria.toolbarButtonBadgeText=%1$S (%2$S)
 
 # Identity notifications popups
 identity.termsOfService = شرایط ارائهٔ خدمات
@@ -465,6 +468,8 @@ identity.privacyPolicy = سیاست امنیتی
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = وارد شوید به %S
 identity.chooseIdentity.label = استفاده از پست الکترونیکی موجود
+identity.newIdentity.label = استفاده از یک ایمیل دیگر
+identity.newIdentity.accessKey = س
 identity.newIdentity.email.placeholder = پست الکترونیکی
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = آدرس پست الکترونیکی‌تان را وارد کنید برای ورود به %S
@@ -485,6 +490,8 @@ getUserMedia.shareMicrophone.message = آیا مایلید که میکروفون
 getUserMedia.shareScreen.message = آیا مایلید که صفحه‌ تصویرتان را با %S به اشتراک بگذارید؟
 getUserMedia.shareCameraAndMicrophone.message = آیا می‌خواهید دوربین و میکروفون خود را با %S به اشتراک بگذارید؟
 getUserMedia.shareScreenAndMicrophone.message = آیا مایلید که میکروفون‌ و صفحه‌ تصویرتان را با %S به اشتراک بگذارید؟
+getUserMedia.selectWindow.label=پنجره برای به‌اشتراک‌گذاری‌:
+getUserMedia.selectWindow.accesskey=پ
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
