--- a/hy-AM/dom/chrome/dom/dom.properties
+++ b/hy-AM/dom/chrome/dom/dom.properties
@@ -150,11 +150,13 @@ ShowModalDialogWarning=window.showModalDialog()-ի օգտագործումը չի
 Window_ContentWarning=window._content-ը հնացել է:   Օգտագործեք window.content-ը:
 # LOCALIZATION NOTE: Do not translate "XMLHttpRequest"
 SyncXMLHttpRequestWarning=Միաժամանակ XMLHttpRequest հիմնական հոսքում ընդունելի չէ, որովհետև այն վնասակար է: Մանրամասները՝ http://xhr.spec.whatwg.org/
+ImplicitMetaViewportTagFallback=Գտնվել է ոչ տեսանելի կցապիտակ: Խնդրում ենք հստակորեն նշել նախորդ չնախատեսված ոփոխությունը հետագա տարբերակում: Մանրամասները՝ https://developer.mozilla.org/en/docs/Mozilla/Mobile/Viewport_meta_tag
 # LOCALIZATION NOTE: Do not translate "DataContainerEvent" or "CustomEvent"
 DataContainerEventWarning=DataContainerEvent-ի օգտագործումը ցանկալի չէ: Փոխարենը օգտ. CustomEvent-ը:
 # LOCALIZATION NOTE: Do not translate "sendAsBinary" or "send(Blob data)"
 SendAsBinaryWarning=Ոչ ստանդարտ sendAsBinary եղանակը առարկվել է և շուտով կհեռացվի: Փոխարենը օգտագործեք ստանդարտ send(Blob data) եղանակը:
 # LOCALIZATION NOTE: Do not translate "window.controllers"
+Window_ControllersWarning=window.controllers-ը հնացել է: Մի օգտագործեք այն UA որոշման համար:
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
 KeyNameDownWarning=KeyboardEvent.key "Down" արժեքը հնացել է և կանվանափոխվի "ArrowDown": Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
@@ -206,3 +208,4 @@ KeyNameZoomWarning=KeyboardEvent.key "Zoom" արժեքը հնացել է և կա
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key արժեքը, որը սկսում է"Dead"-ով, հնացել է և կմիացվի միայն "Dead"-ով: Մանրամասները՝ https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=XUL հանգույցների ներմուծումը չի ողջունվում: Այն շուտով կհեռացվի:
+XMLDocumentLoadPrincipalMismatch=document.load-ի օգտագործումը արգելվել է այն փաստաթղթերից, որոնք գալիս են այլ պատուհաններից: Միայն այն պատուհանը, որտեղ փաստաթուղթը ստեղծվել է կարող է կանչել .load: Փոխարենը նախընտրելի է օգտագործել XMLHttpRequest-ը:
