[hy-AM] update from Pootle (firefox)

--- a/hy-AM/browser/installer/nsisstrings.properties
+++ b/hy-AM/browser/installer/nsisstrings.properties
@@ -53,7 +53,7 @@ SEND_PING=Ու&ղարկել տեղակայման տեղեկությունը Mozi
 BROWSE_BUTTON=Ը&նտրել…
 DEST_FOLDER=Տեղակայելու թղթապանակը
 
-DOWNLOADING_LABEL=&brandShortName;-ը բեռնվում է...
+DOWNLOADING_LABEL=$BrandShortName-ի ներբեռնում...
 INSTALLING_LABEL=$BrandShortName-ի տեղակայում...
 UPGRADING_LABEL=$BrandShortName-ի արդիացում...
 
