No Bug - Remove 'Kachelfunktion'. r=Wawuschel

--- a/de/browser/chrome/browser/newTab.properties
+++ b/de/browser/chrome/browser/newTab.properties
@@ -25,7 +25,7 @@ newtab.intro.paragraph1=Wenn Sie einen neuen Tab öffnen, sehen Sie Kacheln für
 newtab.intro.paragraph2=Zur Bereitstellung dieses Dienstes sammelt und verwendet Mozilla bestimmte Analysedaten über Ihre Verwendung der Kacheln in Übereinstimmung mit unserem %1$S.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
-newtab.intro.paragraph3=Sie können die Kachelfunktion ausschalten. Klicken Sie dazu <span style='display:inline-block;'>auf %1$S,</span> um die Einstellungen zu öffnen.
+newtab.intro.paragraph3=Sie können die Kacheln deaktivieren. Klicken Sie dazu <span style='display:inline-block;'>auf %1$S,</span> um die Einstellungen zu öffnen.
 newtab.learn.link=Weitere Informationen…
 newtab.privacy.link=Datenschutzhinweis
 newtab.pin=Seite immer an aktueller Position anzeigen
