[S] devtools: Bug 1069421 - Add a memory graph to the timeline

--- a/it/browser/chrome/browser/devtools/timeline.properties
+++ b/it/browser/chrome/browser/devtools/timeline.properties
@@ -12,4 +12,5 @@ timeline.label.reflow = Reflow
 timeline.label.paint = Paint
 timeline.label.domevent = Eventi DOM
 timeline.label.consoleTime = Console
+graphs.memory = MB
 timeline.markerDetailFormat = %1$S (%2$S)
