--- a/it/browser/chrome/browser/devtools/timeline.properties
+++ b/it/browser/chrome/browser/devtools/timeline.properties
@@ -10,6 +10,7 @@ timeline.records = RISULTATI
 timeline.label.styles = Stili
 timeline.label.reflow = Reflow
 timeline.label.paint = Paint
+timeline.label.javascript = Javascript
 timeline.label.domevent = Eventi DOM
 timeline.label.consoleTime = Console
 graphs.memory = MB
