[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -515,6 +515,7 @@ getUserMedia.shareEntireScreen.label = تمام صفحه
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = به اشتراک‌گذاری دستگاه‌های انتخاب‌شده؛ به اشتراک‌گذاری دستگاه‌های انتخاب‌شده
 getUserMedia.shareSelectedDevices.accesskey = ب
+getUserMedia.shareSelectedItems.label = به‌اشتراک‌گذاری‌ موارد انتخاب‌شده
 getUserMedia.always.label = همیشه به اشتراک گذاشته شود
 getUserMedia.always.accesskey = ه
 getUserMedia.never.label = هرگز به اشتراک نگذار
@@ -525,7 +526,13 @@ getUserMedia.sharingCameraAndMicrophone.message2 = شما هم اکنون دور
 getUserMedia.sharingApplication.message = شما هم اکنون یک برنامه را با این صفحه به اشتراک گذاشته اید.
 getUserMedia.sharingScreen.message = شما هم اکنون صفحه نمایش خود را با این صفحه به اشتراک گذاشته اید.
 getUserMedia.sharingWindow.message = شما هم اکنون یک پنجره را با این صفحه به اشتراک گذاشته اید.
+getUserMedia.continueSharing.label = ادامه اشتراک گذاری
+getUserMedia.continueSharing.accesskey = ا
+getUserMedia.stopSharing.label = توقف اشتراک‌گذاری‌
+getUserMedia.stopSharing.accesskey = ت
 
+getUserMedia.sharingMenu.label = زبانه‌ ها و دستگاه‌های به‌اشتراک‌گذاری‌شده
+getUserMedia.sharingMenu.accesskey = د
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -542,8 +549,15 @@ getUserMedia.sharingWindow.message = شما هم اکنون یک پنجره را
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (دوربین)
+getUserMedia.sharingMenuMicrophone = %S (میکروفن)
+getUserMedia.sharingMenuApplication = %S (برنامه)
+getUserMedia.sharingMenuMicrophoneApplication = %S (میکروفون و برنامه)
+getUserMedia.sharingMenuMicrophoneScreen = %S (میکروفون و صفحه نمایش)
+getUserMedia.sharingMenuMicrophoneWindow = %S (میکروفون و پنجره)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = مبدا نا‌شناخته
 
 # LOCALIZATION NOTE - %S is brandShortName
 
