[qa] mobile, security: Bug 1096007 - [sr][ff35] Localization of "CA (Certificate Authority)" is not consistent, r=civas

--- a/sr/mobile/android/chrome/pippki.properties
+++ b/sr/mobile/android/chrome/pippki.properties
@@ -7,7 +7,7 @@ nssdialogs.cancel.label=Откажи
 
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/pippki.dtd
 downloadCert.title=Пријем сертификата
-downloadCert.message1=Упитани сте да ли верујете новој компанији за издавање сертификата (CA).
+downloadCert.message1=Упитани сте да ли верујете новом сертификационом телу (CA).
 downloadCert.viewCert.label=Прикажи
 downloadCert.trustSSL=Верујем да идентификује веб сајтове.
 downloadCert.trustEmail=Верујем да идентификује кориснике е-поште.
