--- a/sr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sr/security/manager/chrome/pipnss/nsserrors.properties
@@ -91,7 +91,7 @@ SSL_ERROR_NO_COMPRESSION_OVERLAP=Није могућа безбедна кому
 SSL_ERROR_HANDSHAKE_NOT_COMPLETED=Није могуће покренути још један сусрет за SSL док се тренутни сусрет не доврши.
 SSL_ERROR_BAD_HANDSHAKE_HASH_VALUE=Примљене су неисправне вредности хеша са удаљеног рачунара.
 SSL_ERROR_CERT_KEA_MISMATCH=Дати сертификат се не може употребити за изабрани алгоритам размене кључева.
-SSL_ERROR_NO_TRUSTED_SSL_CLIENT_CA=Ниједан ауторитет за сертификате није од поверења за аутентикацију путем SSL са клијентом.
+SSL_ERROR_NO_TRUSTED_SSL_CLIENT_CA=Ниједано сертификационо тело није сигурно за SSL аутентификацију клијента.
 SSL_ERROR_SESSION_NOT_FOUND=Клијентов ID за сесију SSL није нађен у серверовом кешу за сесије.
 SSL_ERROR_DECRYPTION_FAILED_ALERT=Удаљени рачунар није могао да дешифрује слог SSL ког је примио.
 SSL_ERROR_RECORD_OVERFLOW_ALERT=Удаљени рачунар је примио слог SSL који је дужи од дозвољеног.
@@ -246,7 +246,7 @@ SEC_ERROR_JS_ADD_MOD_FAILURE=Немогуће је додати модул
 SEC_ERROR_JS_DEL_MOD_FAILURE=Неуспешно брисање модула
 SEC_ERROR_OLD_KRL=Нови KRL није старији од тренутног.
 SEC_ERROR_CKL_CONFLICT=Нови CKL има другог издавача од тренутног CKL.  Уклоните тренутни CKL.
-SEC_ERROR_CERT_NOT_IN_NAME_SPACE=Ауторитет за сертифицирање за овај сертификат не сме да издаје сертификат са овим именом.
+SEC_ERROR_CERT_NOT_IN_NAME_SPACE=Сертификационо тело за овај сертификат није овлашћен да издаје сертификат са овим именом.
 SEC_ERROR_KRL_NOT_YET_VALID=Списак опозваних кључева за овај сертификат још није важећи.
 SEC_ERROR_CRL_NOT_YET_VALID=Списак опозваних сертификата за овај сертификат још није важећи.
 SEC_ERROR_UNKNOWN_CERT=Тражени сертификат није пронађен.
@@ -312,5 +312,5 @@ SEC_ERROR_UNKNOWN_PKCS11_ERROR=Непозната ПКЦС #11 грешка.
 SEC_ERROR_BAD_CRL_DP_URL=Неисправна или URL адреса која није подржана у CRL имену дистрибутивне тачке.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Сертификат је потписан коришћењем алгоритма за потписивање који је онемогућен из сигурносних разлога.
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Сервер користи key pinning (HPKP) али ниједан сертификат од поверења није могао бити изграђен тако да одговара овом pinset-у. Key pinning прекршаји се не могу превазићи.
-MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Сервер користи сертификат са основним ограничењима екстензије да би идентификовао компанију за издавање сертификата. За правилно издате сертификате, ово не би требао бити случај.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Сервер користи сертификат са основним ограничењима екстензије да би га идентификовао као сертификационо тело. Ово не би требао бити случај за правилно издате сертификате.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Сервер је представио сертификат са величином кључа која је сувише мала да би се успоставила безбедна веза.
