--- a/sr/security/manager/chrome/pipnss/pipnss.properties
+++ b/sr/security/manager/chrome/pipnss/pipnss.properties
@@ -41,7 +41,7 @@ InternalToken=Програмски уређај за безбедност
 VerifySSLClient=SSL сертификат клијента
 VerifySSLServer=SSL сертификат сервера
 VerifySSLStepUp=Напредни SSL сервер
-VerifySSLCA=Власништво SSL сертификата
+VerifySSLCA=SSL сертификационо тело
 VerifyEmailSigner=Сертификат потписника е-поште
 VerifyEmailRecip=Сертификат примаоца е-поште
 VerifyProtectObjSign=Потпис заштићеног објекта
@@ -49,7 +49,7 @@ VerifyObjSign=Потпис објекта
 VerifyUserImport=Увоз сертификата корисника
 VerifyCAVerifier=Провера компаније која издаје сертификате
 VerifyStatusResponder=Извештавач о статусу
-VerifyAnyCA=Било која провера сертификата
+VerifyAnyCA=Било које сертификационо тело
 HighGrade=Високи ниво
 MediumGrade=Средњи ниво
 # LOCALIZATION NOTE (nick_template): $1s is the common name from a cert (e.g. "Mozilla"), $2s is the CA name (e.g. VeriSign)
@@ -112,7 +112,7 @@ CertDumpCrlDistPoints=Тачка CRL дистрибуције
 CertDumpCertPolicies=Полиса сертификата
 CertDumpPolicyMappings=Мапирања полисе сертификата
 CertDumpPolicyConstraints=Ограничења полисе сертификата
-CertDumpAuthKeyID=Кључ препознавања власништва сертификата
+CertDumpAuthKeyID=Кључ препознавања сертификационог тела
 CertDumpExtKeyUsage=Напредно коришћење кључа
 CertDumpAuthInfoAccess=Власништво приступа
 CertDumpAnsiX9DsaSignature=ANSI X9.57 DSA потпис
@@ -130,8 +130,8 @@ CertDumpNonCritical=Некритично
 CertDumpSigAlg=Алгоритам потписа сертификата
 CertDumpCertSig=Вредност потписа сертификата
 CertDumpExtensionFailure=Грешка: немогуће одрадити проширење
-CertDumpIsCA=Је ауторитет за сертификацију
-CertDumpIsNotCA=Није ауторитет за сертификацију
+CertDumpIsCA=Је сертификационо тело
+CertDumpIsNotCA=Није сертификационо тело
 CertDumpPathLen=Највећи број посредних сертификата: %S
 CertDumpPathLenUnlimited=неограничен
 CertDumpEKU_1_3_6_1_5_5_7_3_1=Аутентификација кроз TLS мрежни сервер
@@ -287,7 +287,7 @@ AVATemplate=%S = %S
 
 PSMERR_SSL_Disabled=Није могуће безбедно повезивање јер је протокол SSL искључен.
 PSMERR_SSL2_Disabled=Није могуће безбедно се повезати јер сајт користи старије, небезбедно издање SSL протокола.
-PSMERR_HostReusedIssuerSerial=Примили сте неисправан сертификат. Молим обавестите администратора сервера или надлежне о следећем:\n\nВаш сертификат садржи исти серијски број као још неки власнички сертификат. Молим прибавите нови сертификат са јединственим серијским бројем.
+PSMERR_HostReusedIssuerSerial=Примили сте неисправан сертификат. Молимо Вас обавестите администратора сервера или надлежне о следећем:\n\nВаш сертификат садржи исти серијски број као још неки сертификат издат од стране сертификационог тела. Молимо Вас набавите нови сертификат са јединственим серијским бројем.
 
 SSLConnectionErrorPrefix=Дошло је до грешке при повезивању на %S.
 
@@ -334,7 +334,7 @@ VerifyInvalidCA=<Неисправна ауторитет>
 VerifyDisabledAlgorithm=<алгоритам потписа није сигуран>
 VerifyUnknown=<непознато>
 CertUser=Ваш сертификат
-CertCA=Ауторитет (компанија која издаје сертификате)
+CertCA=СА (сертификационо тело)
 CertSSL=SSL сервер
 CertEmail=С/МИМЕ (S/MIME) рачунар
 CertUnknown=Непознат
@@ -342,8 +342,8 @@ CertNoNickname=(нема надимка)
 CertNoEmailAddress=(нема е-поште)
 NicknameExpired=(истекао)
 NicknameNotYetValid=(још није важећи)
-CaCertExists=Овај сертификат је већ инсталиран као ауторитет за сертификате.
-NotACACert=Овај сертификат не потиче од ауторитета за сертификате, па не може да буде увезен на списак ауторитета за сертификате.
+CaCertExists=Овај сертификат је већ инсталиран као сертификационо тело.
+NotACACert=Овај сертификат не потиче од сертификационог тела, па не може да буде увезен на списак сертификационог тела.
 NotImportingUnverifiedCert=Овај сертификат није могао бити проверен и неће бити увезен. Издавач сертификата је можда непознат или му се не може веровати, сертификат је можда истекао или је опозван, или можда није одобрен.
 UserCertIgnoredNoPrivateKey=Овај лични сертификат није могуће инсталирати јер не поседујете одговарајући приватни кључ који је направљен када је сертификат потражен.
 UserCertImported=Ваш лични сертификат је инсталиран. Сачувајте резервни умножак овог сертификата.
