Corrections for Aurora + solving #105

--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -271,12 +271,12 @@ powered_by_afterLogo=
 feedback_call_experience_heading2=Hvordan var din samtale?
 feedback_what_makes_you_sad=Hvad gør dig bedrøvet?
 feedback_thank_you_heading=Tak for din feedback!
-feedback_category_audio_quality=Lydkvalitet
-feedback_category_video_quality=Videokvalitet
-feedback_category_was_disconnected=Blev afbrudt
-feedback_category_confusing=Forvirrende
+feedback_category_audio_quality=Lydkvaliteten
+feedback_category_video_quality=Videokvaliteten
+feedback_category_was_disconnected=Samtalen blev afbrudt
+feedback_category_confusing=Brugerfladen er forvirrende
 feedback_category_other=Andet:
-feedback_custom_category_text_placeholder=Hvad gik galt?
+feedback_custom_category_text_placeholder=Beskriv, hvad der gik galt
 feedback_submit_button=Indsend
 feedback_back_button=Tilbage
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
