--- a/da/browser/chrome/browser/places/places.properties
+++ b/da/browser/chrome/browser/places/places.properties
@@ -84,7 +84,7 @@ tagResultLabel=Mærkat
 bookmarkResultLabel=Bogmærke
 switchtabResultLabel=Faneblad
 keywordResultLabel=Stikord
-searchengineResultLabel=Søg
+searchengineResultLabel=Søgning
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
