Issue 97, Web Feed => Feed, video podcast => video-podcast

--- a/da/browser/chrome/browser/preferences/preferences.properties
+++ b/da/browser/chrome/browser/preferences/preferences.properties
@@ -57,8 +57,8 @@ useDefault=Brug %S (standard)
 useOtherApp=Vælg en anden…
 fpTitleChooseApp=Vælg hjælpeprogram
 manageApp=Programdetaljer…
-webFeed=Web Feed
-videoPodcastFeed=Video Podcast
+webFeed=Feed
+videoPodcastFeed=Video-podcast
 audioPodcastFeed=Podcast
 alwaysAsk=Spørg altid
 portableDocumentFormat=Portable Document Format (PDF)
