[TrUp] Suite: DNT; Chatzilla: version update

--- a/it/extensions/irc/chrome/chatzilla.properties
+++ b/it/extensions/irc/chrome/chatzilla.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-locale.version = 0.9.90.1
+locale.version = 0.9.91
 locale.error = Si sta utilizzando ChatZilla %1$S, che richiede la localizzazione in versione %2$S. La localizzazione attualmente selezionata, %3$S, è in versione %4$S, e quindi potrebbero verificarsi dei problemi nel funzionamento di ChatZilla.\n\nSi consiglia di aggiornare o rimuovere la localizzazione di ChatZilla attualmente in uso.
 locale.authors = Giacomo Magnini; Iacopo Benesperi; Francesco Lodolo
 unknown = <sconosciuto>
@@ -736,6 +736,8 @@ msg.logfile.closing = Chiusura del file di log <%S> in corso.
 msg.logfile.write.error = Impossibile scrivere nel file <%S>. Log disattivato.
 msg.logging.icon.off = La scrittura di log è disabilitata. Fai clic sull'icona per iniziare a salvare i log per questa vista.
 msg.logging.icon.on = La scrittura di log è abilitata. Fai clic sull'icona per non salvare più i log per questa vista.
+msg.alert.icon.off = I messaggi di notifica sono spenti. Fare clic sull'icona per iniziare a mostrare le notifiche per i nuovi messaggi.
+msg.alert.icon.on = I messaggi di notifica sono spenti. Fare clic sull'icona per fermare le notifiche per i nuovi messaggi.
 msg.already.connected = Si è già connessi a ``%S''.
 msg.enter.nick = Inserire un soprannome.
 msg.network.connecting = Connessione a ``%S'' in corso. Usare /cancel per interrompere l'operazione.
@@ -959,6 +961,12 @@ msg.supports.flagsOn = Questo server GESTISCE: %S"
 msg.supports.flagsOff = Questo server NON GESTISCE: %S"
 msg.supports.miscOption = "%S=%S"
 msg.supports.miscOptions = Impostazioni/limiti server: %S"
+msg.supports.caps = Funzionalità supportate: %S"
+msg.supports.capsOn = Funzionalità abilitate: %S"
+msg.caps.list = Funzionalità disponibili: %S"
+msg.caps.on = Funzionalità %S abilitata.
+msg.caps.off = Funzionalità %S disabilitata.
+msg.caps.error = La funzionalità %S non è valida.
 msg.conf.mode.on = La modalità conferenza è ora attiva per questa vista; entrate, abbandoni, uscite e cambi di soprannome non verranno visualizzati.
 msg.conf.mode.stayon = La modalità conferenza è attiva per questa vista; entrate, abbandoni, uscite e cambi di soprannome non sono visualizzati.
 msg.conf.mode.off = La modalità conferenza non è più attiva per questa vista; entrate, abbandoni, uscite e cambi di soprannome verranno visualizzati.
@@ -1062,6 +1070,20 @@ msg.prefs.fmt.display.user = Rete %S, utente %S"
 msg.prefs.global = Impostazioni globali
 pref.activityFlashDelay.label = Ritardo lampeggio attività
 pref.activityFlashDelay.help = Quando una scheda che ha già registrato dell'attività ne registra dell'altra, la scheda lampeggia. Questa preferenza è la durata del lampeggio in millisecondi: 0 lo disattiva.
+pref.alert.globalEnabled.label = Abilitato globalmente
+pref.alert.globalEnabled.help = Se abilitato, tutti gli avvisi configurati potrebbero essere mostrati. Se disabilitato, non verrà mostrato alcun avviso. Viene fornito solamente un interruttore generale.
+pref.alert.enabled.label = Abilitato
+pref.alert.enabled.help = Se abilitato, vengono mostrati dei popup per questa vista.
+pref.alert.nonFocusedOnly.label = Solo quando la finestra è inattiva
+pref.alert.nonFocusedOnly.help = Se abilitato, tutti i messaggi di notifica vengono soppressi quando la finestra è attiva. Altrimenti, i messaggi di notifica per le viste non attive verranno mostrati. Si suggerisce de deselezionare l'opzione ai moderatori di canale o nei canali con poco traffico.
+pref.alert.channel.event.label = Avvisi per eventi nel canale
+pref.alert.channel.event.help = Mostra i messaggi di notifica per join, part, kick, usermode e gli altri messaggi di sistema. Suggerito per imoderatori o per canali con poco traffico.
+pref.alert.channel.chat.label = Avvisi per chat nel canale
+pref.alert.channel.chat.help = Mostra i messaggi di notifica per i normali messaggi di chat. Potrebbe risultare fastidioso per i canali con molto traffico. Suggerito per i moderatori o per canali con poco traffico.
+pref.alert.channel.stalk.label = Avvisi per i richiami nel canale
+pref.alert.channel.stalk.help = Mostra i messaggi di notifica per i messaggi che contengono parole di richiamo.
+pref.alert.user.chat.label = Avvisi per gli utenti della chat
+pref.alert.user.chat.help = Mostra i messaggi di notifica per i messaggi privati.
 pref.aliases.label = Alias dei comandi
 pref.aliases.help = Permette di creare scorciatoie per vari comandi o sequenze di comandi. Ogni elemento è nella forma "<name> = <command-list>". La command-list è una lista di comandi (senza il prefisso "/") e relativi parametri, ognuno separato da ";". Il nome dell'alias sarà automaticamente convertito in un comando all'avvio di ChatZilla.
 pref.autoAwayCap.label = Limite utenti per verifica automatica lontananza
@@ -1078,6 +1100,8 @@ pref.awayIdleMsg.label = Messaggio di auto assenza
 pref.awayIdleMsg.help = Il messaggio che ChatZilla deve utilizzare quando si è assenti.
 pref.awayNick.label = Soprannome (da assente)
 pref.awayNick.help = Questo soprannome sarà usata automaticamente quando ci si identifica come assenti, se è differente da 'Soprannome'. Si può lasciare questo campo bianco per non cambiare soprannome quando si è assenti.
+pref.bugKeyword.label = Parole chiave per bug
+pref.bugKeyword.help = È possibile definire parole chiave traccianti multiple come espressione regolare separandole con  "|" per esempio bug|problema|caso|ticket
 pref.bugURL.label = URL di Bugzilla
 pref.bugURL.help = L'URL usato per i collegamenti ai bug, con "%s" sostituito dal numero di bug. Il testo "bug " seguito da un numero diventerà un collegamento che usa questo URL.
 pref.bugURL.comment.label = URL per i commenti Bugzilla
@@ -1226,17 +1250,17 @@ pref.sound.enabled.label = Attivato
 pref.sound.enabled.help = Spuntare questa preferenza per permettere i suoni, o togliere la spunta per disattivarli. Non fornisce altro che un interruttore generale.
 pref.sound.overlapDelay.label = Ritardo sovrapposizione
 pref.sound.overlapDelay.help = Imposta il periodo di tempo durante il quale lo stesso evento non attiverà il suono. Ad esempio, il valore predefinito di 2000ms (2 secondi) indica che se due parole di allerta vengono trovate nel giro di 2 secondi, solo la prima farà emettere un suono.
-pref.sound.channel.start.label = Canale: inizio sessione
+pref.sound.channel.start.label = Suono per l'avvio del canale
 pref.sound.channel.start.help = 
-pref.sound.channel.event.label = Canale: evento non di chat
+pref.sound.channel.event.label = Suono per evento nel canale
 pref.sound.channel.event.help = 
-pref.sound.channel.chat.label = Canale: chat normale
+pref.sound.channel.chat.label = Suono per chat nel canale
 pref.sound.channel.chat.help = 
-pref.sound.channel.stalk.label = Canale: parola proibita trovata
+pref.sound.channel.stalk.label = Suono per richiamo nel canale
 pref.sound.channel.stalk.help = 
-pref.sound.user.start.label = Utente: inizio sessione
+pref.sound.user.start.label = Suono per l'avvio dell'utente
 pref.sound.user.start.help = 
-pref.sound.user.stalk.label = Utente: chat normale
+pref.sound.user.stalk.label = Suono per la chat utente
 pref.sound.user.stalk.help = 
 pref.stalkWholeWords.label = Solo se la parola di allerta è una parola intera
 pref.stalkWholeWords.help = Questa preferenza scambia la gestione di ChatZilla delle parole di allerta tra trovare parole corrispondenti o semplici sottostringhe. Ad esempio, "ChatZilla è bello" corrisponderà alla parola di allerta "zilla" solo se questa preferenza è disattivata.
@@ -1256,6 +1280,8 @@ pref.group.general.label = Generale
 pref.group.general.connect.label = Connessione
 pref.group.general.ident.label = Identità
 pref.group.general.log.label = Log
+pref.group.general.palert.label = Messaggi di notifica
+pref.group.global.palertconfig.label = Configurazione dei messaggi di notifica
 pref.group.appearance.label = Aspetto
 pref.group.appearance.misc.label = Varie
 pref.group.appearance.motif.label = Stili
@@ -1285,9 +1311,9 @@ pref.group.global.log.help = Imposta lo stato predefinito di log per le viste. O
 pref.group.global.maxLines.label = Dimensione conversazioni memorizzate
 pref.group.global.maxLines.help = Il numero di linee di testo da memorizzare in questo tipo di vista. Una volta raggiunto il limite, le linee più vecchie vengono rimosse all'aggiunta di nuove linee.
 pref.group.global.sounds.label = Configurazione suoni
-pref.group.global.sounds.help = 
-pref.group.global.soundEvts.label = Eventi con suono
-pref.group.global.soundEvts.help = I suoni da emettere per certi eventi del client. Queste preferenze sono una lista separata da spazi di "beep" o URL di tipo file:.
+pref.group.general.sounds.help = 
+pref.group.general.soundEvts.label = Suoni degli eventi
+pref.group.general.soundEvts.help = Emetti un suono per alcuni eventi del client. Queste preferenze consistono in una lista separata da spazi o di "beep" o di file: URL.
 pref.autoperform.label = Esegui in automatico
 pref.autoperform.help = Inserire un comando da eseguire quando ci si connette a questa rete/si entra in questo canale/si apre una chat privata con questo utente. I comandi sono eseguiti nell'ordine elencato.
 pref.autoperform.channel.label = Canale
