[qa] netwerk, services: improved translations

--- a/sr/netwerk/necko.properties
+++ b/sr/netwerk/necko.properties
@@ -8,14 +8,14 @@
 #SendingRequestTo=Sending request to 
 #TransferringDataFrom=Transferring data from 
 
-3=Тражење: %1$S...
-4=Веза са: %1$S...
-5=Слање захтева ка %1$S...
-6=Пријем података са %1$S...
-7=Повезивање са %1$S...
+3=Тражење: %1$S…
+4=Повезан са: %1$S…
+5=Слање захтева ка %1$S…
+6=Пријем података са %1$S…
+7=Повезивање са %1$S…
 8=Прочитано %1$S
 9=Записано %1$S
-10=Чекање на %1$S...
+10=Чекање на %1$S…
 11=Потражено: %1$S…
 
 27=Почетак FTP преноса…
@@ -35,7 +35,7 @@ DirFileLabel=Датотека:
 
 PhishingAuth=Намеравате да посетите "%1$S". Овај сајт покушава да вас завара да мислите да је то неки други сајт. Будите пажљиви.
 PhishingAuthAccept=Разумем и бићу врло опрезан
-SuperfluousAuth=Само што се нисте пријавили на „%1$S‟ под корисничким именом „%2$S,‟ али сајт у питању не захтева регистрацију. Можда је превара.\n\nДа ли желите да посетите сајт „%1$S‟?
+SuperfluousAuth=Само што се нисте пријавили на „%1$S‟ под корисничким именом „%2$S,‟ али сајт не захтева регистрацију. Можда је превара у питању.\n\nДа ли желите да посетите сајт „%1$S‟?
 AutomaticAuth=Управо ћете се пријавити на „%1$S“ са корисничким именом „%2$S“.
 
 TrackingUriBlocked=Ресурс на "%1$S" је блокиран јер је заштита праћења омогућено.
