--- a/sr/services/sync/errors.properties
+++ b/sr/services/sync/errors.properties
@@ -10,7 +10,7 @@ error.login.reason.no_password2 = Недостаје лозинка
 error.login.reason.no_recoverykey= Нема употребљивог кључа за опоравак
 error.login.reason.server       = Сервер је погрешно подешен
 
-error.sync.failed_partial            = Један или више врста података не могу да се синхронизују
+error.sync.failed_partial            = Једна или више врста података не могу да се синхронизују
 # LOCALIZATION NOTE (error.sync.reason.serverMaintenance): We removed the extraneous period from this string
 error.sync.reason.serverMaintenance  = Одржавање Firefox Sync сервера је у току, синхронизација ће се аутоматски наставити
 
@@ -21,7 +21,7 @@ weak-password   = Користите јачу лозинку
 error.reason.unknown          = Непозната грешка
 
 change.password.pwSameAsPassword     = Лозинка не може да буде иста као тренутна
-change.password.pwSameAsUsername     = Лозинка не сме бити иста као и корисничко име
-change.password.pwSameAsEmail        = Лозинка не сме бити иста као и адреса е-поште
+change.password.pwSameAsUsername     = Лозинка не може бити иста као и корисничко име
+change.password.pwSameAsEmail        = Лозинка не може бити иста као и адреса е-поште
 change.password.mismatch             = Унете лозинке се не поклапају
 change.password.tooShort             = Унета лозинка је прекратка
