--- a/sr/services/sync/sync.properties
+++ b/sr/services/sync/sync.properties
@@ -11,12 +11,12 @@ lastSync2.label = Последња синхронизација: %S
 mobile.label = Забелешке са мобилног
 
 remote.pending.label = Синхронизујем удаљене језичке…
-remote.missing2.label = Синхронизујте Ваше уређаје опет да бисте приступили њиховим језичцима
+remote.missing2.label = Синхронизујте Ваше уређаје поново да бисте приступили њиховим језичцима
 remote.opened.label = Сви даљински језичци су већ отворени
 remote.notification.label = Недавни језичци радне површине ће бити доступни када се синхронизују
 
 error.login.title = Грешка при пријављивању
-error.login.description = Приликом синхронизације дошло је до грешке: %1$S. Покушајте поново.
+error.login.description = Дошло је до грешке приликом синхронизације: %1$S. Покушајте поново.
 error.login.prefs.label = Поставке…
 error.login.prefs.accesskey = П
 # should decide if we're going to show this
@@ -24,7 +24,7 @@ error.logout.title = Дошло је до грешке приликом одја
 error.logout.description = Sync је наишао на грешку при повезивању. Вероватно је све у реду, па не морате ништа да радите.
 error.sync.title = Грешка при синхронизацији
 error.sync.description = Дошло је до грешке при синхронизацији: %1$S. Ова радња ће аутоматски бити поновљена.
-error.sync.prolonged_failure = Синхронизација није успела последњих %1$S дана. Молимо да проверите поставке мреже.
+error.sync.prolonged_failure = Синхронизација није успела последњих %1$S дана. Молимо Вас да проверите поставке Ваше мреже.
 error.sync.serverStatusButton.label = Стање сервера
 error.sync.serverStatusButton.accesskey = С
 error.sync.needUpdate.description = Потребно је да ажурирате Firefox Sync да бисте наставили да синхронизујете своје податке.
