--- a/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
@@ -68,7 +68,7 @@ SSL_ERROR_ILLEGAL_PARAMETER_ALERT=SSL-motparten avviste en håndhilsen-melding s
 SSL_ERROR_UNSUPPORTED_CERT_ALERT=SSL-motparten har ikke støtte for sertifikatstypen som den mottok.
 SSL_ERROR_CERTIFICATE_UNKNOWN_ALERT=SSL-motparten har et uspesifisert problem med sertifikatet den mottok.
 SSL_ERROR_GENERATE_RANDOM_FAILURE=SSL oppdaget et problem med slumptallsgeneratoren.
-SSL_ERROR_SIGN_HASHES_FAILURE=Klarte ikke digitalt signere data som er nødvendig for å verifisere sertifikatet.
+SSL_ERROR_SIGN_HASHES_FAILURE=Klarte ikke digitalt signere data som er nødvendig for å bekrefte sertifikatet.
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=SSL klarte ikke pakke ut den offentlige nøkkelen fra motpartens sertifikat.
 SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=En uspesifisert feil oppstod under SSL Server Key Exchange-håndhilsenen.
 SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=En uspesifisert feil oppstod under SSL Client Key Exchange-håndhilsenen.
@@ -169,7 +169,7 @@ SEC_ERROR_NO_EMAIL_CERT=Ikke kryptert eller signert: Du har ikke ennå et e-post
 SEC_ERROR_NO_RECIPIENT_CERTS_QUERY=Ikke kryptert: Du har ikke sertifikater for hver av mottakerne.
 SEC_ERROR_NOT_A_RECIPIENT=Klarte ikke dekryptere: Du er ikke en mottaker, eller tilsvarende sertifikat og privat nøkkel ble ikke funnet.
 SEC_ERROR_PKCS7_KEYALG_MISMATCH=Klarte ikke dekryptere: Nøkkelens krypteringsalgoritme stemmer ikke med sertifikatet.
-SEC_ERROR_PKCS7_BAD_SIGNATURE=Signaturverifikasjon feilet: ingen signerer funnet, for mange signerere funnet, eller ugyldig/ødelagt data.
+SEC_ERROR_PKCS7_BAD_SIGNATURE=Signaturkontroll feilet: ingen signerer funnet, for mange signerere funnet, eller ugyldig/ødelagt data.
 SEC_ERROR_UNSUPPORTED_KEYALG=Ustøttet eller ugyldig nøkkelalgoritme.
 SEC_ERROR_DECRYPTION_DISALLOWED=Klarte ikke dekryptere: Er kryptert med en algoritme eller nøkkelstørrelse som ikke er tillatt.
 XP_SEC_FORTEZZA_BAD_CARD=Fortezza-kort har ikke blitt ordentlig initialisert.  Fjern det, og returner det til utsteder.
