[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ca/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,12 @@ quit-button.tooltiptext.linux2 = Surt del %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Surt del %1$S (%2$S)
 
+
+
 panic-button.label = Forget
 panic-button.tooltiptext = Forget about some browsing history
 
-loop-call-button.label = Invita algú a parlar
-loop-call-button.tooltiptext = Invita algú a parlar
+web-apps-button.label = Aplicacions
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
