--- a/ca/browser/chrome/browser/devtools/gcli.properties
+++ b/ca/browser/chrome/browser/devtools/gcli.properties
@@ -170,7 +170,7 @@ helpManDefault=opcional, per defecte=%S
 
 # LOCALIZATION NOTE: This forms part of the output from the 'help' command.
 # 'GCLI' is a project name and should be left untranslated.
-helpIntro=GCLI is an experiment to create a highly usable command line for web developers.
+helpIntro=El GCLI és un experiment per crear una línia d'ordres molt fàcil d'utilitzar per als desenvolupadors web.
 
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
