--- a/ca/browser/chrome/browser/devtools/webide.properties
+++ b/ca/browser/chrome/browser/devtools/webide.properties
@@ -19,8 +19,12 @@ importPackagedApp_title=Seleccioneu el directori
 importHostedApp_title=Obre una aplicació hostatjada
 importHostedApp_header=Escriviu l'URL de manifest
 
-notification_showTroubleShooting_label=resolució de problemes
+notification_showTroubleShooting_label=Resolució de problemes
 notification_showTroubleShooting_accesskey=r
+
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=S'està carregant…
 
 # These messages appear in a notification box when an error occur.
 
