--- a/ca/browser/chrome/browser/places/places.properties
+++ b/ca/browser/chrome/browser/places/places.properties
@@ -23,7 +23,7 @@ bookmarksLivemarkFailed=No s'ha pogut carregar el canal de l'adreça d'interès 
 menuOpenLivemarkOrigin.label=Obre «%S»
 
 sortByName=Ordena «%S» per nom
-sortByNameGeneric=Sort by Name
+sortByNameGeneric=Ordena per nom
 # LOCALIZATION NOTE (view.sortBy.1.name.label): sortBy properties are versioned.
 # When any of these changes, all of the properties must be bumped, and the
 # change must be annotated here.  Both label and accesskey must be updated.
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Baixades
 OrganizerQueryAllBookmarks=Totes les adreces d'interès
 OrganizerQueryTags=Etiquetes
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Etiqueta
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Adreça d'interès
+switchtabResultLabel=Pestanya
+keywordResultLabel=Paraula clau
+searchengineResultLabel=Cerca
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
