--- a/ca/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/ca/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -162,7 +162,7 @@ addon.purchase.tooltip=Visiteu la galeria de complements per comprar-lo
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
 cmd.purchaseAddon.label=Compra'l per %S…
-cmd.purchaseAddon.accesskey=u
+cmd.purchaseAddon.accesskey=r
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=El %S necessita que accepteu l'acord de llicència d'usuari final següent abans que es pugui procedir amb la instal·lació:
