--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -13,7 +13,7 @@ droponhomemsg=Voleu que aquest document sigui la vostra nova pàgina d'inici?
 # LOCALIZATION NOTE (contextMenuSearch): %1$S is the search engine,
 # %2$S is the selection string.
 contextMenuSearch=Cerca «%2$S» a %1$S
-contextMenuSearch.accesskey=S
+contextMenuSearch.accesskey=C
 
 # bookmark dialog strings
 
@@ -24,11 +24,11 @@ xpinstallPromptAllowButton=Permet
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
 # See http://www.mozilla.org/access/keyboard/accesskey for details
-xpinstallPromptAllowButton.accesskey=A
+xpinstallPromptAllowButton.accesskey=P
 xpinstallDisabledMessageLocked=L'administrador del sistema ha inhabilitat la instal·lació de programari.
 xpinstallDisabledMessage=Actualment la instal·lació de programari està inhabilitada. Feu clic a Habilita i torneu-ho a provar.
 xpinstallDisabledButton=Habilita
-xpinstallDisabledButton.accesskey=n
+xpinstallDisabledButton.accesskey=H
 
 # LOCALIZATION NOTE (addonDownloading, addonDownloadCancelled, addonDownloadRestart):
 # Semicolon-separated list of plural forms. See:
@@ -74,7 +74,7 @@ lwthemeInstallRequest.allowButton.accesskey=e
 
 lwthemePostInstallNotification.message=S'ha instal·lat un tema nou.
 lwthemePostInstallNotification.undoButton=Desfés
-lwthemePostInstallNotification.undoButton.accesskey=U
+lwthemePostInstallNotification.undoButton.accesskey=D
 lwthemePostInstallNotification.manageButton=Gestiona els temes…
 lwthemePostInstallNotification.manageButton.accesskey=G
 
@@ -102,13 +102,6 @@ popupShowPopupPrefix=Mostra «%S»
 # %S is brandShortName
 badContentBlocked.blocked.message=El %S ha blocat contingut d'aquesta pàgina.
 badContentBlocked.notblocked.message=El %S no ha blocat cap contingut d'aquesta pàgina.
-
-# missing plugin installer
-installPlugin.message = Voleu instal·lar el complement necessari per mostrar els continguts multimèdia d'aquesta pàgina?
-installPlugin.button.label=Instal·la %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=No ho tornis a demanar
-installPlugin.ignoreButton.accesskey=N
 
 crashedpluginsMessage.title=El connector %S ha fallat.
 crashedpluginsMessage.reloadButton.label=Torna a carregar la pàgina
@@ -537,8 +530,6 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 finestra);#1 (#2 finestres
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Comparteix el dispositiu seleccionat;Comparteix els dispositius seleccionats
-getUserMedia.shareSelectedDevices.accesskey = C
 getUserMedia.shareScreen.label = Comparteix la pantalla
 getUserMedia.shareApplication.label = Comparteix l'aplicació seleccionada
 getUserMedia.shareWindow.label = Comparteix la finestra seleccionada
@@ -562,13 +553,18 @@ getUserMedia.stopSharing.accesskey = D
 
 getUserMedia.sharingMenu.label = Pestanyes que comparteixen dispositius
 getUserMedia.sharingMenu.accesskey = d
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -603,3 +599,9 @@ slowStartup.disableNotificationButton.accesskey = a
 customizeTips.tip0 = %1$S: podeu personalitzar el %2$S perquè es comporti com voleu. Simplement arrossegueu qualsevol element de dalt al menú o a la barra d'eines. %3$S quant a la personalització del %2$S.
 customizeTips.tip0.hint = Suggeriment
 customizeTips.tip0.learnMore = Més informació
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartBrowserButton.label = Reinicia el %S
