--- a/ca/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ca/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,9 @@ openFile.title=Obre un fitxer
 # open fails.
 openFile.failed=No s'ha pogut llegir el fitxer.
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Neteja els elements
@@ -77,6 +80,11 @@ browserContext.notification=Aquest bloc de proves s'executa en el context del na
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/en/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Línia %1$S, Col %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
