--- a/ca/browser/chrome/browser/loop/loop.properties
+++ b/ca/browser/chrome/browser/loop/loop.properties
@@ -4,6 +4,12 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+
 share_link_header_text=Compartiu aquest enllaç per convidar algú a la conversa:
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
@@ -52,10 +58,8 @@ problem_accessing_account=S'ha produït un problema en accedir al vostre compte
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Reintenta
 
-share_email_subject3=Us han convidat a una conversa
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=Per acceptar la invitació, copieu l'enllaç o feu-hi clic per iniciar la conversa:\r\n\r\n{{callUrl}}
 share_button=Correu electrònic
 copy_url_button=Copia
 copied_url_button=S'ha copiat
@@ -85,6 +89,8 @@ new_contact_button=Contacte nou
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Nom
 new_contact_email_placeholder=Correu electrònic
+
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -238,11 +244,15 @@ connection_error_see_console_notification=Ha fallat la trucada; vegeu la consola
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=En utilitzar el {{clientShortname}}, accepteu les {{terms_of_use}} i l'{{privacy_notice}}.
 legal_text_tos = condicions d'ús
 legal_text_privacy = avís de privadesa
-client_shortname_fallback=producte
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Com ha anat la conversa?
 feedback_what_makes_you_sad=Què no us ha agradat?
@@ -267,3 +277,15 @@ feedback_rejoin_button=Torna a unir-m'hi
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Denuncia l'usuari
+
+help_label=Ajuda
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_leave_button_label=Surt
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_deleteConfirmation_label=N'esteu segur?
